added API endpoints to set/remove a pin
see #660
